--- a/config.env
+++ b/config.env
@@ -1,13 +1,13 @@
-KERNEL_SOURCE=https://github.com/Diva-Room/Miku_kernel_xiaomi_wayne
-KERNEL_SOURCE_BRANCH=dsu-test
-KERNEL_DEFCONFIG=vendor/wayne_defconfig
+KERNEL_SOURCE=https://github.com/schqiushui/android_kernel_motorola_sm8350
+KERNEL_SOURCE_BRANCH=android-12
+KERNEL_DEFCONFIG=/arch/arm64/configs/defconfig
 TARGET_ARCH=arm64
-KERNEL_FILE=Image.gz-dtb
+KERNEL_FILE=Image.gz
 CLANG_VERSION=r450784d
 EXTRA_BUILD_COMMAND:LD=ld.lld
 DISABLE-LTO=false
 USE_KERNELSU=true
-USE_KPROBES=false
+USE_KPROBES=true
 USE_OVERLAYFS=false
 NEED_DTBO=false
 MAKE_BOOT_IMAGE=true
