--- a/config.env
+++ b/config.env
@@ -4,7 +4,7 @@ KERNEL_DEFCONFIG=vendor/ext_config/moto-lahaina-tundra.config
 TARGET_ARCH=arm64
 KERNEL_FILE=Image.gz
 CLANG_VERSION=r450784d
-EXTRA_BUILD_COMMAND:LD=ld.lld
+EXTRA_BUILD_COMMAND:
 DISABLE-LTO=false
 USE_KERNELSU=true
 USE_KPROBES=true
