--- a/config.env
+++ b/config.env
@@ -1,13 +1,13 @@
 KERNEL_SOURCE=https://github.com/schqiushui/android_kernel_motorola_sm8350
 KERNEL_SOURCE_BRANCH=android-12
-KERNEL_DEFCONFIG=arch/arm64/configs/vendor/ext_config/moto-lahaina-tundra.config
+KERNEL_DEFCONFIG=stock_tundra_defconfig
 TARGET_ARCH=arm64
 KERNEL_FILE=Image.gz
 CLANG_VERSION=r450784d
 EXTRA_BUILD_COMMAND:LLVM=1 LLVM_IAS=1
 DISABLE-LTO=false
 USE_KERNELSU=true
-USE_KPROBES=false
+USE_KPROBES=true
 USE_OVERLAYFS=false
 NEED_DTBO=false
 MAKE_BOOT_IMAGE=true
