--- a/config.env
+++ b/config.env
@@ -5,10 +5,10 @@ TARGET_ARCH=arm64
 KERNEL_FILE=Image.gz
 CLANG_VERSION=r450784d
 EXTRA_BUILD_COMMAND:LLVM=1 LLVM_IAS=1
-DISABLE-LTO=false
+DISABLE-LTO=true
 USE_KERNELSU=true
 USE_KPROBES=true
-USE_OVERLAYFS=false
+USE_OVERLAYFS=true
 NEED_DTBO=false
 MAKE_BOOT_IMAGE=true
 SOURCE_BOOT_IMAGE=https://antooz.ronyis.cn/boot_b.img
