--- a/config.env
+++ b/config.env
@@ -4,11 +4,11 @@ KERNEL_DEFCONFIG=stock_tundra_defconfig
 TARGET_ARCH=arm64
 KERNEL_FILE=Image.gz
 CLANG_VERSION=r450784d
-EXTRA_BUILD_COMMAND:LLVM=1 LLVM_IAS=1
-DISABLE-LTO=true
+EXTRA_BUILD_COMMAND:NM=llvm-nm OBJDUMP=llvl-objdump STRIP=llvm-strip
+DISABLE-LTO=false
 USE_KERNELSU=true
 USE_KPROBES=true
-USE_OVERLAYFS=true
+USE_OVERLAYFS=false
 NEED_DTBO=false
 MAKE_BOOT_IMAGE=true
 SOURCE_BOOT_IMAGE=https://antooz.ronyis.cn/boot_b.img
