--- a/config.env
+++ b/config.env
@@ -8,7 +8,7 @@ EXTRA_BUILD_COMMAND:NM=llvm-nm OBJDUMP=llvl-objdump STRIP=llvm-strip
 DISABLE-LTO=false
 USE_KERNELSU=true
 USE_KPROBES=true
-USE_OVERLAYFS=false
+USE_OVERLAYFS=true
 NEED_DTBO=false
 MAKE_BOOT_IMAGE=true
 SOURCE_BOOT_IMAGE=https://antooz.ronyis.cn/boot_b.img
