--- a/config.env
+++ b/config.env
@@ -3,7 +3,7 @@ KERNEL_SOURCE_BRANCH=android-12
 KERNEL_DEFCONFIG=stock_tundra_defconfig
 TARGET_ARCH=arm64
 KERNEL_FILE=Image.gz
-CLANG_VERSION=r450784d
+CLANG_VERSION=r416183b
 EXTRA_BUILD_COMMAND:NM=llvm-nm OBJDUMP=llvl-objdump STRIP=llvm-strip
 DISABLE-LTO=false
 USE_KERNELSU=true
