--- a/config.env
+++ b/config.env
@@ -9,6 +9,6 @@ DISABLE-LTO=false
 USE_KERNELSU=true
 USE_KPROBES=true
 USE_OVERLAYFS=true
-NEED_DTBO=false
+NEED_DTBO=true
 MAKE_BOOT_IMAGE=true
 SOURCE_BOOT_IMAGE=https://antooz.ronyis.cn/boot_b.img
